test/_output/switch.wast.bin.wast.wast.bin.wast.wast
(module
  (type $0 (func (param i32) (result i32)))
  (type $1 (func (param i64) (result i64)))
  (type $2 (func (result i32)))
  (func $0
    (type 0)
    (local i32)
    (i32.const 100)
    (local.set 1)
    (block
      (block
        (block
          (block
            (block
              (block
                (block
                  (block
                    (block
                      (block (local.get 0) (br_table 0 1 2 3 4 5 6 8 7))
                      (local.get 0)
                      (return)
                    )
                    (nop)
                  )
                )
                (i32.const 0)
                (local.get 0)
                (i32.sub)
                (local.set 1)
                (br 5)
              )
              (br 4)
            )
            (i32.const 101)
            (local.set 1)
            (br 3)
          )
          (i32.const 101)
          (local.set 1)
        )
        (i32.const 102)
        (local.set 1)
      )
    )
    (local.get 1)
    (return)
  )
  (func $1
    (type 1)
    (local i64)
    (i64.const 100)
    (local.set 1)
    (block
      (result i64)
      (block
        (block
          (block
            (block
              (block
                (block
                  (block
                    (block
                      (block
                        (local.get 0)
                        (i32.wrap_i64)
                        (br_table 0 1 2 3 6 5 4 8 7)
                      )
                      (local.get 0)
                      (return)
                    )
                    (nop)
                  )
                )
                (i64.const 0)
                (local.get 0)
                (i64.sub)
                (br 5)
              )
              (i64.const 101)
              (local.set 1)
            )
          )
        )
        (local.get 1)
        (br 1)
      )
      (i64.const -5)
    )
    (return)
  )
  (func $2
    (type 0)
    (block
      (result i32)
      (i32.const 10)
      (block
        (result i32)
        (i32.const 100)
        (block
          (result i32)
          (i32.const 1_000)
          (block
            (result i32)
            (i32.const 2)
            (local.get 0)
            (i32.mul)
            (i32.const 3)
            (local.get 0)
            (i32.and)
            (br_table 1 2 3 0)
          )
          (i32.add)
        )
        (i32.add)
      )
      (i32.add)
    )
    (return)
  )
  (func $3 (type 2) (block (i32.const 0) (br_table 0)) (i32.const 1))
  (export "stmt" (func 0))
  (export "expr" (func 1))
  (export "arg" (func 2))
  (export "corner" (func 3))
)
(assert_return (invoke "stmt" (i32.const 0)) (i32.const 0))
(assert_return (invoke "stmt" (i32.const 1)) (i32.const -1))
(assert_return (invoke "stmt" (i32.const 2)) (i32.const -2))
(assert_return (invoke "stmt" (i32.const 3)) (i32.const -3))
(assert_return (invoke "stmt" (i32.const 4)) (i32.const 100))
(assert_return (invoke "stmt" (i32.const 5)) (i32.const 101))
(assert_return (invoke "stmt" (i32.const 6)) (i32.const 102))
(assert_return (invoke "stmt" (i32.const 7)) (i32.const 100))
(assert_return (invoke "stmt" (i32.const -10)) (i32.const 102))
(assert_return (invoke "expr" (i64.const 0)) (i64.const 0))
(assert_return (invoke "expr" (i64.const 1)) (i64.const -1))
(assert_return (invoke "expr" (i64.const 2)) (i64.const -2))
(assert_return (invoke "expr" (i64.const 3)) (i64.const -3))
(assert_return (invoke "expr" (i64.const 6)) (i64.const 101))
(assert_return (invoke "expr" (i64.const 7)) (i64.const -5))
(assert_return (invoke "expr" (i64.const -10)) (i64.const 100))
(assert_return (invoke "arg" (i32.const 0)) (i32.const 110))
(assert_return (invoke "arg" (i32.const 1)) (i32.const 12))
(assert_return (invoke "arg" (i32.const 2)) (i32.const 4))
(assert_return (invoke "arg" (i32.const 3)) (i32.const 1_116))
(assert_return (invoke "arg" (i32.const 4)) (i32.const 118))
(assert_return (invoke "arg" (i32.const 5)) (i32.const 20))
(assert_return (invoke "arg" (i32.const 6)) (i32.const 12))
(assert_return (invoke "arg" (i32.const 7)) (i32.const 1_124))
(assert_return (invoke "arg" (i32.const 8)) (i32.const 126))
(assert_return (invoke "corner") (i32.const 1))
(assert_invalid
  (module (type $0 (func)) (func $0 (type 0) (i32.const 0) (br_table 3)))
  "unknown label"
)
